@@ -21,16 +21,19 @@ TUNER_DESCS =	\
 	Descriptors/smcs.xml	\
 	Descriptors/System.xml
 
-TUNER_MASTERS =	\
-	masterinfos/silverlight/mscorlib.info	\
-	masterinfos/silverlight/System.info	\
-	masterinfos/silverlight/System.Net.info	\
-	masterinfos/silverlight/System.Core.info	\
-	masterinfos/silverlight/System.Xml.info	\
-	masterinfos/silverlight/System.Runtime.Serialization.info	\
-	masterinfos/silverlight/System.ServiceModel.info	\
-	masterinfos/silverlight/System.ServiceModel.Web.info	\
-	masterinfos/silverlight/Mono.CompilerServices.SymbolWriter.info
+TUNER_LIBRARIES =	\
+	mscorlib	\
+	System	\
+	System.Net	\
+	System.Core	\
+	System.Xml	\
+	System.Xml.Linq	\
+	System.Runtime.Serialization	\
+	System.ServiceModel	\
+	System.ServiceModel.Web	\
+	Mono.CompilerServices.SymbolWriter
+
+TUNER_MASTERS =	$(TUNER_LIBRARIES:%=masterinfos/silverlight/%.info)
 
 LOCAL_MCS_FLAGS = -r:$(LINKER) -r:Mono.Cecil.dll
 
@@ -39,16 +42,7 @@ DISTFILES = README $(TUNER_SOURCES) $(TUNER_DESCS) $(TUNER_MASTERS)
 WORKING_DIR = $(topdir)/class/lib/net_2_1_raw
 OUTPUT_DIR = $(topdir)/class/lib/net_2_1
 
-DLLFILES = \
-	mscorlib.dll	\
-	System.dll	\
-	System.Net.dll	\
-	System.Xml.dll	\
-	System.Core.dll	\
-	System.Runtime.Serialization.dll	\
-	System.ServiceModel.dll	\
-	System.ServiceModel.Web.dll	\
-	Mono.CompilerServices.SymbolWriter.dll
+DLLFILES = $(TUNER_LIBRARIES:%=%.dll)
 
 FILES = smcs.exe $(DLLFILES)
 WORKING_FILES = $(FILES:%=$(WORKING_DIR)/%)
@@ -110,7 +104,18 @@ GACUTIL = MONO_PATH="$(topdir)/class/lib/net_1_1_bootstrap$(PLATFORM_PATH_SEPARA
 
 TUNER_INSTALL_DIR = $(DESTDIR)$(mono_libdir)/mono/2.1
 
-end-install: inst-mscorlib.dll inst-smcs.exe gac-System gac-System.Net gac-System.Xml gac-System.Core gac-System.Runtime.Serialization gac-System.ServiceModel gac-System.ServiceModel.Web gac-Mono.CompilerServices.SymbolWriter
+end-install:	\
+	inst-mscorlib.dll	\
+	inst-smcs.exe	\
+	gac-System	\
+	gac-System.Net	\
+	gac-System.Xml	\
+	gac-System.Xml.Linq	\
+	gac-System.Core	\
+	gac-System.Runtime.Serialization	\
+	gac-System.ServiceModel	\
+	gac-System.ServiceModel.Web	\
+	gac-Mono.CompilerServices.SymbolWriter
 
 inst-%: $(OUTPUT_DIR)/%
 	$(MKINSTALLDIRS) $(TUNER_INSTALL_DIR)
